[package]
name = "wryme"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "wryme — streaming LLM chat TUI, input on top, newest reply right below it"

[[bin]]
name = "wme"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2"
unicode-segmentation = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
